# world-cup

./: .gitignore  LICENSE  README.md  pyproject.toml
data/processed/: player_stats.csv  players.csv  players.json  results.csv  results.json  team_stats.csv  team_stats.json  team_stats_wide.csv  team_stats_wide.json  teams.csv  teams.json
data/processed/1930/: players.csv  players.json  results.csv  results.json  schedule.csv  schedule.json  teams.csv  teams.json
data/processed/1934/: players.csv  players.json  results.csv  results.json  schedule.csv  schedule.json  teams.csv  teams.json
data/processed/1938/: players.csv  players.json  results.csv  results.json  schedule.csv  schedule.json  teams.csv  teams.json
data/processed/1950/: players.csv  players.json  results.csv  results.json  schedule.csv  schedule.json  teams.csv  teams.json
data/processed/1954/: players.csv  players.json  results.csv  results.json  schedule.csv  schedule.json  teams.csv  teams.json
data/processed/1958/: players.csv  players.json  results.csv  results.json  schedule.csv  schedule.json  teams.csv  teams.json
data/processed/1962/: players.csv  players.json  results.csv  results.json  schedule.csv  schedule.json  teams.csv  teams.json
data/processed/1966/: players.csv  players.json  results.csv  results.json  schedule.csv  schedule.json  teams.csv  teams.json
examples/: team_profiles.py
worldcup/: __init__.py  __main__.py  backfill.py  config.py  fetch.py  follow.py  nutmeg.py  player_stats.py  players.py  results.py  schedule.py  seasons.py  storage.py  team_stats.py  teams.py
(+126 files in other folders)
